--- a/catch-em-all/ClientApp/src/custom.css
+++ b/catch-em-all/ClientApp/src/custom.css
@@ -1,14 +1,26 @@
 /* Provide sufficient contrast against white background */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 a {
   color: #0366d6;
 }
 
 code {
-  color: #E01A76;
+  color: #e01a76;
 }
 
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+}
+html {
+  background-color: #243347;
+}
+
+#root {
+  background-color: #243347;
 }
